--- a/PersonalInformation.html
+++ b/PersonalInformation.html
@@ -12,8 +12,8 @@
             ul{
                 float:right;
                 list-style-type:none;
-                margin-top:21.5px;
-                margin-right:-39.15px;
+                margin-top:23.75px;
+                margin-right:-75px;
             }
 
             ul li{
@@ -51,8 +51,10 @@
                 <li class="main"><a href="http://210.70.80.21/~bs109021089/HomePage.html">Home Page</a></li>
                 <li class="main"><a href="#">Personal Information</a></li>
                 <li class="main"><a href="http://210.70.80.21/~bs109021089/index.html">School Timetable</a></li>
+                <li class="main"><a href="http://210.70.80.21/~bs109021089/Publication.html">Publication</a></li>
             </ul>
         </div>
+
         <center>
         <br><br><br><br>
         <font face="Comic Sans MS">    
