--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             ul{
                 float:right;
                 list-style-type:none;
-                margin-top:40px;
-                margin-right:-30px;
+                margin-top:23.75px;
+                margin-right:-67.1px;
             }
             
             ul li{
@@ -59,8 +59,9 @@
               <li class="main"><a href="http://210.70.80.21/~bs109021089/HomePage.html">Home Page</a></li>
               <li class="main"><a href="http://210.70.80.21/~bs109021089/PersonalInformation.html">Personal Information</a></li>
               <li class="main"><a href="#">School Timetable</a></li>
+              <li class="main"><a href="http://210.70.80.21/~bs109021089/Publication.html">Publication</a></li>
             </ul>
-          </div>
+        </div>
 
         <br><br><br>  
 
