--- a/HomePage.html
+++ b/HomePage.html
@@ -18,8 +18,8 @@
         ul{
             float:right;
             list-style-type:none;
-            margin-top:40px;
-            margin-right:-30px;
+            margin-top:45px;
+            margin-right:-75px;
         }
 
         ul li{
@@ -50,6 +50,7 @@
 	    <li class="main"><a href="#">Home Page</a></li>
 	    <li class="main"><a href="http://210.70.80.21/~bs109021089/PersonalInformation.html">Personal Information</a></li>
 	    <li class="main"><a href="http://210.70.80.21/~bs109021089/index.html">School Timetable</a></li>
+        <li class="main"><a href="http://210.70.80.21/~bs109021089/Publication.html">Publication</a></li>
 	  </ul>
     </div>
     
